# MargaritaWASM

./: .gitignore  AirStrike.cpp  AirStrike.h  Animation.cpp  Animation.h  BackgroundObject.h  Block.cpp  Block.h  Bomb.cpp  Bomb.h  BombAnimation.cpp  BombAnimation.h  CMakeCache.txt  CMakeLists.txt  Coin.cpp  Coin.h  Colours.h  Comet.cpp  Comet.h  ControlManager.cpp  ControlsScreen.cpp  ControlsScreen.h  CppCheck.cppcheck  Crab.cpp  Crab.h  DeathScreen.cpp  DeathScreen.h  Enemy.cpp  Enemy.h  EnergyPowerup.cpp  EnergyPowerup.h  Entity.cpp  Entity.h  EntityHealthChangeText.cpp  EntityHealthChangeText.h  EventHandler.cpp  EventHandler.h  GUI.cpp  GUI.h  Game.cpp  (+43 more)
CppCheck-cppcheck-build-dir/: AirStrike.a1  AirStrike.s1  Animation.a1  Animation.s1  Block.a1  Block.s1  Bomb.a1  Bomb.s1  BombAnimation.a1  BombAnimation.s1  Coin.a1  Coin.s1  Comet.a1  Comet.s1  ControlManager.a1  ControlManager.s1  ControlsScreen.a1  ControlsScreen.s1  Crab.a1  Crab.s1  DeathScreen.a1  DeathScreen.s1  Enemy.a1  Enemy.s1  EnergyPowerup.a1  EnergyPowerup.s1  Entity.a1  Entity.s1  EntityHealthChangeText.a1  EntityHealthChangeText.s1  EventHandler.a1  EventHandler.s1  GUI.a1  GUI.s1  Game.a1  Game.cpp.snalyzerinfo  Game.s1  Graphics.a1  Graphics.s1  Item.a1  (+37 more)
src/: AirStrike.cpp  AirStrike.h  Animation.cpp  Animation.h  Block.cpp  Block.h  Bomb.cpp  Bomb.h  BombAnimation.cpp  BombAnimation.h  Coin.cpp  Colours.h  Comet.cpp  ControlManager.h  ControlsScreen.cpp  ControlsScreen.h  Crab.cpp  Crab.h  DeathScreen.cpp  DeathScreen.h  Enemy.cpp  EnergyPowerup.cpp  Entity.cpp  Entity.h  EntityHealthChangeText.cpp  EventHandler.cpp  GUI.cpp  GUI.h  Game.cpp  Game.h  Item.h  Laser.cpp  Laser.h  Multiplayer.cpp  Multiplayer.h  Orb.cpp  Orb.h  Particle.cpp  Particle.h  PauseScreen.cpp  (+21 more)
src/Items/: Item.cpp
